workshop04/statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minions
spec:
  clusterIP: None
  selector:
    app: minio
  ports:
  - name: minio-api
    port: 9000
    targetPort: minio-api
  - name: minio-console
    port: 9001
    targetPort: minio-console
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minions
spec:
  serviceName: minio-hsvc
  replicas: 4
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: minio
        image: bitnami/minio:latest
        ports:
        - containerPort: 9000
          name: minio-api
          protocol: TCP
        - containerPort: 9001
          name: minio-console
          protocol: TCP
        resources:
          requests:
            cpu: "200m"
            memory: "250Mi"
        volumeMounts:
        - name: minio-data
          mountPath: /data
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: minio-api
            scheme: "HTTP"
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: minio-api
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 5
  volumeClaimTemplates:
  - metadata:
      name: minio-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "do-block-storage"
      resources:
        requests:
          storage: 5Gi
